# krpc

./: BUILD.bazel  KRPC.sln  LICENSE  MODULE.bazel
service/MechJeb/: AscentAutopilot.cs  BUILD.bazel  CHANGES.txt  ComputerModule.cs  EditableVariables.cs  KSPAddon.cs  LandingAutopilot.cs  ManeuverPlanner.cs  MechJeb.cs  NodeExecutor.cs  README.md  SmartASS.cs  StagingController.cs  ThrustController.cs
service/MechJeb/Maneuver/: Operation.cs  OperationApoapsis.cs  OperationCircularize.cs  OperationCourseCorrection.cs  OperationEllipticize.cs  OperationInclination.cs  OperationInterplanetaryTransfer.cs  OperationLambert.cs  OperationLan.cs  OperationLongitude.cs  OperationMoonReturn.cs  OperationPeriapsis.cs  OperationResonantOrbit.cs  OperationSemiMajor.cs  OperationTransfer.cs  TimeSelector.cs
service/MechJeb/Util/: MathFunctions.cs
service/MechJeb/docs/: order.txt
service/MechJeb/src/: AirplaneAutopilot.cs  AscentAutopilot.cs  ComputerModule.cs  DeployableController.cs  DockingAutopilot.cs  EditableVariables.cs  IntegratedServiceMarker.cs  KRPC.MechJeb.csproj  KSPAddon.cs  LandingAutopilot.cs  ManeuverPlanner.cs  MechJeb.cs  MechJebLogger.cs  NodeExecutor.cs  RCSController.cs  RendezvousAutopilot.cs  SmartASS.cs  SmartRCS.cs  StagingController.cs  TargetController.cs  ThrustController.cs  Translatron.cs  VesselState.cs
service/MechJeb/src/ExtensionMethods/: ReflectionExtensions.cs  VesselExtensions.cs
service/MechJeb/src/Maneuver/: Operation.cs  OperationApoapsis.cs  OperationCircularize.cs  OperationCourseCorrection.cs  OperationEllipticize.cs  OperationInclination.cs  OperationInterplanetaryTransfer.cs  OperationKillRelVel.cs  OperationLambert.cs  OperationLan.cs  OperationLongitude.cs  OperationMoonReturn.cs  OperationPeriapsis.cs  OperationPlane.cs  OperationResonantOrbit.cs  OperationSemiMajor.cs  OperationTransfer.cs  TimeSelector.cs
service/MechJeb/src/Util/: MathFunctions.cs  Vector6.cs
service/MechJeb/test/: test_mechjeb.py  test_mechjeb_unavailable.py
(+69 files in other folders)
