load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//:config.bzl", "assembly_version")
load("//service:build.bzl", "service_deps")
load("//tools/build:assembly_info.bzl", "csharp_assembly_info")
load("//tools/build:python.bzl", "py_lint_test")
load("//tools/ServiceDefinitions:build.bzl", "service_definitions")

exports_files([
    "CHANGES.txt",
    "LICENSE",
])

filegroup(
    name = "MechJeb",
    srcs = [
        "CHANGES.txt",
        "LICENSE",
        ":KRPC.MechJeb",
        ":ServiceDefinitions",
    ],
    visibility = ["//:__pkg__"],
)

csharp_assembly_info(
    name = "AssemblyInfo",
    cls_compliant = False,
    copyright = "2018-2024 Genhis; kRPC contributors",
    description = "MechJeb 2 API for kRPC",
    title = "KRPC.MechJeb",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to //:csproj-deps so it can copy AssemblyInfo.cs to generated_deps
    ],
)

srcs = [":AssemblyInfo"] + glob(["src/**/*.cs"])

deps = service_deps + ["//service/SpaceCenter:KRPC.SpaceCenter"]

csharp_library(
    name = "KRPC.MechJeb",
    srcs = srcs,
    target_frameworks = ["net472"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = deps,
)

service_definitions(
    name = "ServiceDefinitions",
    out = "KRPC.MechJeb.json",
    assemblies = [
        ":KRPC.MechJeb",
        "//service/SpaceCenter:KRPC.SpaceCenter",
        "//server:KRPC",
    ],
    service = "MechJeb",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [":lint"],
)

test_suite(
    name = "lint",
    tests = [":pylint"],
)

py_lint_test(
    name = "pylint",
    size = "small",
    srcs = glob(["test/*.py"]),
    pylint_config = "test/pylint.rc",
    deps = [
        "//client/python:krpc_lib",
        "//tools/krpctest:krpctest_lib",
    ],
)
